[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/settings_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://joe_rumbi.theme" type="Theme" id=3]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SettingsMenu" parent="." instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.5
margin_top = -66.0
margin_right = 130.5
margin_bottom = 66.0
theme = ExtResource( 3 )

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_right = 261.0
margin_bottom = 34.0
focus_neighbour_top = NodePath("../ExitGameButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
text = "Resume"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 261.0
margin_bottom = 72.0
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../ExitGameButton")
text = "Settings"

[node name="BackToMainMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 261.0
margin_bottom = 110.0
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../ResumeButton")
text = "Back to Main Menu"

[node name="ExitGameButton" type="Button" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 261.0
margin_bottom = 148.0
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../ResumeButton")
text = "Exit Game"

[connection signal="settings_menu_closed" from="SettingsMenu" to="." method="_on_SettingsMenu_settings_menu_closed"]
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackToMainMenuButton" to="." method="_on_BackToMainMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
